Bug 461912 - Artifacts with rectangular grid
Summary: Artifacts with rectangular grid
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 5.1.3
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-16 17:00 UTC by Igor
Modified: 2022-11-17 12:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Artifacts with rectangular grid (1.77 KB, image/png)
2022-11-16 17:00 UTC, Igor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Igor 2022-11-16 17:00:38 UTC
Created attachment 153810 [details]
Artifacts with rectangular grid

Artifacts with rectangular grid

STEP TO REPRODUCE
1. Create a new document
2. Select any brush (basic-1)
3. Select black (dark) color
4. Move the brush over the grid (not painting, move cursor), paint, again move the brush over the grid

OBSERVED RESULT
Artifacts appear and disappear on a rectangular grid. (grid is colored)

EXPECTED RESULT
Grid must not be painted

SOFTWARE/OS VERSIONS
Windows 11 Pro
22H2
22621.819

ADDITIONAL INFORMATION
Artifacts only on a rectangular grid, no artifacts on an isometric grid
Comment 1 Dmitry Kazakov 2022-11-17 12:06:28 UTC
Git commit 764719791a4ce6887aedc9d92777f3c4a03198c6 by Dmitry Kazakov.
Committed on 17/11/2022 at 12:06.
Pushed by dkazakov into branch 'master'.

Fix grid rendering when partial canvas updates

We need to update the dashes offset when rendering the grid partially

M  +21   -6    libs/ui/canvas/kis_grid_decoration.cpp

https://invent.kde.org/graphics/krita/commit/764719791a4ce6887aedc9d92777f3c4a03198c6
Comment 2 Dmitry Kazakov 2022-11-17 12:06:47 UTC
Git commit 52a040179d7457b1de3e04dc821245da4afc37c0 by Dmitry Kazakov.
Committed on 17/11/2022 at 12:06.
Pushed by dkazakov into branch 'krita/5.1'.

Fix grid rendering when partial canvas updates

We need to update the dashes offset when rendering the grid partially

M  +21   -6    libs/ui/canvas/kis_grid_decoration.cpp

https://invent.kde.org/graphics/krita/commit/52a040179d7457b1de3e04dc821245da4afc37c0