Fix grid rendering when partial canvas updates

We need to update the dashes offset when rendering the grid partially

BUG:461912